add: basic info

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <body>
     <main>
         <article class="box">
-            <h1>Your Name</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <h1>Akash Jaiswal</h1>
+            <div><a href="mailto:your.email@example.com">akashjaiswal3846@gmail.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,9 +21,9 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://github.com/jaiakash">@jaiakash</a></li>
+                    <li><a href="https://linkedin.com/in/akashjaiswal03">@Akash Jaiswal</a></li>
+                    <li><a href="https://twitter.com/akashjaiswal03">@akashjaiswal03</a></li>
                 </ul>    
             </section>
             
@@ -31,12 +31,12 @@
                 <div class="education">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        School name
+                        National Institute of Technology, Tiruchirappalli
                     </h2>
-                    <h3>Major</h3>
+                    <h3>Civil Engineering with minor in CSE</h3>
                     <ul>
-                        <li>GPA: 4.0</li>
-                        <li>Years</li>
+                        <li>GPA: 8.4</li>
+                        <li>2nd Year</li>
                     </ul>
                 </div>
             </section>
